--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -17,16 +17,19 @@
                 <div style="color: red">{{ form.new_password2.errors }}</div>
                 <hr>
 
-                <div style="color: red">{{  form.non_field_errors  }}</div>
+                <div style="color: red">{{ form.non_field_errors }}</div>
                 <button class="btn btn-default" style="width: 100%" type="submit">Сохранить</button>
             </form>
         </div>
     {% else %}
         <div class="sign-form">
             <p style="color: red">
-                Ссылка для изменения пароля некорректна, возможно из-за того что она уже была использована!
+                Ссылка для изменения пароля недействительна.
+                Возможно, она уже была использована.
+            </p>
             <hr>
-            Пожалуйста попытайтесь снова или <a href="{% url 'contacts' %}">напишите нам на почту</a>!
+            <p>
+                Пожалуйста, повторите попытку или <a href="{% url 'contacts' %}">свяжитесь с&nbsp;службой поддержки!</a>!
             </p>
         </div>
     {% endif %}
