--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -13,13 +13,15 @@
 
     <div class="message-panel">
         <p>
-            Инструкции для изменения пароля высланы на указанный email <br>
-            <b>(если он существует в нашей базе).</b><br>
-            Вы должны получить письмо в ближайшее время!
+            Инструкции для&nbsp;изменения пароля уже были высланы на&nbsp;указанный
+            адрес электронной почты (если соответствующий аккаунт существует).
+            <br>
+            Вы должны получить письмо в&nbsp;ближайшее время!
         </p>
         <hr>
         <p>
-            Если вы не получили письмо, убедитесь что указали корректный адрес и проверьте папку со спамом.
+            Если вы не&nbsp;получили письмо, убедитесь, что указали правильный адрес,
+            и&nbsp;проверьте папку со&nbsp;спамом.
         </p>
     </div>
 
