--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 
-
     <div class="sign-form django-control">
         <h3>Сброс пароля</h3>
         <hr>
@@ -10,7 +9,9 @@
             {% csrf_token %}
             {{ form.as_p }}
             <hr>
-            <button class="btn btn-default" type="submit" style="width: 100%">Отправить</button>
+            <button class="btn btn-default" type="submit" style="width: 100%">
+                Отправить
+            </button>
         </form>
     </div>
 
