--- a/cloud/templates/auth/signup.html
+++ b/cloud/templates/auth/signup.html
@@ -156,10 +156,18 @@
             clear_and_disabled_all_elements();
             get_all_universities();
 
-            $("#id_university").change(function(){university_updated($(this).val())});
-            $("#id_department").change(function(){department_updated($(this).val())});
-            $("#id_chair").change(function(){chair_updated($(this).val())});
-            $("#id_program").change(function(){program_updated($(this).val())});
+            $("#id_university").change(function () {
+                university_updated($(this).val())
+            });
+            $("#id_department").change(function () {
+                department_updated($(this).val())
+            });
+            $("#id_chair").change(function () {
+                chair_updated($(this).val())
+            });
+            $("#id_program").change(function () {
+                program_updated($(this).val())
+            });
         });
     </script>
 
