--- a/cloud/static/css/global.css
+++ b/cloud/static/css/global.css
@@ -3,6 +3,10 @@ body {
     font-family: 'Roboto Slab', serif;
 }
 
+nav.navbar {
+    border-radius: 0 !important;
+}
+
 .content-block {
     text-align: center;
     vertical-align: middle;
