--- a/cloud/static/css/post_list.css
+++ b/cloud/static/css/post_list.css
@@ -11,6 +11,7 @@ body {
     border-radius: 0.5rem;
     overflow: hidden;
     margin: 1rem auto;
+    box-shadow: 0 0.15em 0 #dddddd;
 }
 
 .post-list article .post-container {
