--- a/cloud/static/css/post_list.css
+++ b/cloud/static/css/post_list.css
@@ -36,7 +36,7 @@ body {
         display: grid;
         grid-gap: 1rem;
         grid-template-columns: repeat(auto-fill, minmax(35rem, 1fr));
-        grid-auto-rows: 1rem;
+        grid-auto-rows: 0;
         margin: 1rem;
     }
 
