Исправлен класс кнопки перехода по ссылке

--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -21,7 +21,7 @@
             <img src="{{ post.image.url }}" class="post-img">
         {% endif %}
         {% if post.link %}
-            <a href="{{ post.link }}" class="btn btn-success">
+            <a href="{{ post.link }}" class="btn btn-primary">
                 Перейти по&nbsp;ссылке
             </a>
         {% endif %}
