Внедрена в проект библиотека imagesloaded.js

--- a/cloud/templates/cloud/post_list.html
+++ b/cloud/templates/cloud/post_list.html
@@ -100,7 +100,7 @@
 {% endblock %}
 
 {% block js %}
-    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <script src="{% static 'js/imagesloaded.pkgd.min.js' %}"></script>
     <script src="{% static 'js/post_list.js' %}"></script>
     <script src="{% static 'js/toMarkdown.js' %}"></script>
 {% endblock %}
