--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -51,7 +51,7 @@
 
                 <hr>
                 <div class="post-text">
-                    <p>{{ post.text }}</p>
+                    <p>{{ post.html | safe }}</p>
                 </div>
 
                 {% if post.image %}
