Не использовать jQuery при поиске департаментов

--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -68,20 +68,19 @@
         $(document).ready(function () {
             clear_and_disabled_all_elements();
             get_all_universities();
-            $("#id_university").change(function () {
-                university_updated($(this).val())
+            document.getElementById("id_university").addEventListener("change", function () {
+                university_updated(document.getElementById("id_university").value);
             });
-            $("#id_department").change(function () {
-                department_updated($(this).val())
+            document.getElementById("id_department").addEventListener("change", function () {
+                department_updated(document.getElementById("id_department").value);
             });
-            $("#id_chair").change(function () {
-                chair_updated($(this).val())
+            document.getElementById("id_chair").addEventListener("change", function () {
+                chair_updated(document.getElementById("id_chair").value);
             });
-            $("#id_program").change(function () {
-                program_updated($(this).val())
+            document.getElementById("id_program").addEventListener("change", function () {
+                program_updated(document.getElementById("id_program").value);
             });
-
-            $("#id_type option:first").text("Любой");
+            document.getElementById("id_type").options[0].textContent = "Любой";
         });
 
         function post_to_html(item) {
