Переименовать toMarkdown.js

--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -140,7 +140,7 @@
 {% endblock %}
 
 {% block js %}
-    <script src="{% static 'js/toMarkdown.js' %}"></script>
+    <script src="{% static 'js/markdown_live_preview.js' %}"></script>
     <script src="{% static 'js/department_search.js' %}"></script>
     <script>
 
