--- a/cloud/static/css/global.css
+++ b/cloud/static/css/global.css
@@ -90,7 +90,7 @@ img.univer-logo {
     background-color: #f8f8f8;
     box-shadow: 3px 0 10px rgba(0, 0, 0, 0.5);
     width: 100%;
-    margin: -20px -20px 0 0;
+    margin: 0 -20px 0 0;
     padding: 10px;
 }
 
