Исправить ссылку на дизайнера (то есть на меня :)
Не хочу, чтобы рассылали спам. Илья уже прислал нечто
непристойное.

--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -168,7 +168,7 @@
     </p>
     <p>
         Макет и&nbsp;вёрстку страницы с&nbsp;<i class="fas fa-heart" title="любовью"></i> выполнил
-        <a href="mailto:egor@banka.space" style="color: inherit">Егор Дубенецкий</a>.
+        <a href="https://vk.com/edubenetskiy" style="color: inherit">Егор Дубенецкий</a>.
     </p>
 </footer>
 
