Разместить ссылку на Политику на лэндинге

--- a/cloud/static/css/main.css
+++ b/cloud/static/css/main.css
@@ -368,6 +368,10 @@ footer {
     font-size: 80%;
 }
 
+footer a {
+    color: inherit;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
