--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -167,8 +167,11 @@
         &pi;Cloud&nbsp;— первый неклассический файлообменник.
     </p>
     <p>
+        <a href="{% url 'privacy_policy' %}">Политика конфиденциальности</a>
+    </p>
+    <p>
         Макет и&nbsp;вёрстку страницы с&nbsp;<i class="fas fa-heart" title="любовью"></i> выполнил
-        <a href="https://vk.com/edubenetskiy" style="color: inherit">Егор Дубенецкий</a>.
+        <a href="https://vk.com/edubenetskiy">Егор Дубенецкий</a>.
     </p>
 </footer>
 
