Перевести пометки WAI-ARIA на русский
Раз уж они есть, то пусть будут на русском языке.

--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -20,7 +20,7 @@
 
             {% if error %}
                 <div class="alert alert-danger alert-dismissible show" role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Закрыть">
                         <span aria-hidden="true">&times;</span>
                     </button>
                     {{ error }}
@@ -28,7 +28,7 @@
             {% endif %}
             {% if message %}
                 <div class="alert alert-info alert-dismissible show" role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Закрыть">
                         <span aria-hidden="true">&times;</span>
                     </button>
                     {{ message }}
