--- a/cloud/templates/cloud/post_list.html
+++ b/cloud/templates/cloud/post_list.html
@@ -52,12 +52,12 @@
     {% endif %}
 
     {% if posts.has_other_pages %}
-        <nav class="pagination" aria-label="Page navigation">
+        <nav class="pagination" aria-label="Навигация по страницам">
             <ul class="pagination">
 
                 {% if posts.has_previous %}
                     <li>
-                        <a href="?page={{ posts.previous_page_number }}" aria-label="Previous">
+                        <a href="?page={{ posts.previous_page_number }}" aria-label="Предыдущая">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
@@ -73,7 +73,7 @@
                             <span>
                                 {{ i }}
                                 <span class="sr-only">
-                                    (current)
+                                    (текущая страница)
                                 </span>
                             </span></li>
                     {% else %}
@@ -86,7 +86,7 @@
                 {% endfor %}
 
                 {% if posts.has_next %}
-                    <li><a href="?page={{ posts.next_page_number }}" aria-label="Next"><span
+                    <li><a href="?page={{ posts.next_page_number }}" aria-label="Следующая"><span
                             aria-hidden="true">&raquo;</span></a>
                     </li>
                 {% else %}
