Добавить абзац о согласии с Политикой в форму

--- a/cloud/templates/auth/signup.html
+++ b/cloud/templates/auth/signup.html
@@ -72,6 +72,13 @@
                              data-sitekey="6LcjsksUAAAAAEKIzQNR60uz9k1UiTO6vDEmW86k"></div>
                     </div>
 
+                    <p class="small">
+                        Нажимая кнопку «Зарегистрироваться», вы соглашаетесь с&nbsp;<!--
+                        --><a href="{% url 'privacy_policy' %}" target="_blank"><!--
+                        -->Политикой обработки персональных данных</a>
+                        (ссылка откроется в&nbsp;новой вкладке).
+                    </p>
+
                     <div class="form-group">
                         <input class="btn btn-default col-xs-12" type="submit" value="Зарегистрироваться"/>
                     </div>
