--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a id="menu-brand" class="navbar-brand" href="{% url 'index' %}">
+            <a id="menu-brand" class="navbar-brand {% block cloud_active %}{% endblock %}" href="{% url 'index' %}">
                 <img id="picloud-logo"
                      src="{% static 'img/piLogo.png' %}"
                      alt="logo">
@@ -57,7 +57,7 @@
                     </li>
                 {% endif %}
 
-                <li {% block cloud_active %}{% endblock %}>
+                <li>
                     <a href="{% url 'post_list' %}">
                         Облако
                         <span style="font-size:16px;"
