--- a/cloud/templates/auth/signup.html
+++ b/cloud/templates/auth/signup.html
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input class="btn btn-default col-xs-12" type="submit" value="Зарегистрироваться"/>
+                        <input class="btn btn-primary col-xs-12" type="submit" value="Зарегистрироваться"/>
                     </div>
 
                 </div>
